# G4_HES

./: CMakeLists.txt  GNUmakefile  HES.cc  README  README.md
ana/macros/: .gitignore  Qopt.py  README  calcMatrix.C  calcMatrix_oku.C  getMatrix.cc  getMatrix.h  makefile  readvalue.C  resolution.cc  return_QscanSettings.C  solid.C
ana/macros/lib/: calcMatrix.d  calcMatrix_oku.d  getMatrix.d  readvalue.d  resolution.d  solid.d
include/: BeamLineElement.hh  Collimator.hh  DFieldMan.hh  DMagnet.hh  Define.hh  DetectorHut.hh  EDC.hh  EDC1.hh  EDC1Hit.hh  EDC1SD.hh  EDC2.hh  EDC2Hit.hh  EDC2SD.hh  EHodo1.hh  EHodo2.hh  HESAnalysis.hh  HESDetectorConstruction.hh  HESEH1Hit.hh  HESEH1SD.hh  HESEH2Hit.hh  HESEH2SD.hh  HESEMPhysics.hh  HESEventAction.hh  HESField.hh  HESGlobalSize.hh  HESParamMan.hh  HESPrimaryGeneratorAction.hh  HESRunAction.hh  HESSteppingAction.hh  HESTargetHit.hh  HESTargetSD.hh  HESTrackingAction.hh  HESTrajectory.hh  HESTransportation.hh  HESVDHit.hh  HESVDSD.hh  HESVisManager.hh  HESWorld.hh  MaterialList.hh  PCS.hh  (+17 more)
run/: .gitignore  compile.sh
run/scan/: Makefile  anaScan.C  inloop.cc
src/: BeamLineElement.cc  BranchList_HESG4.txt  Collimator.cc  DFieldMan.cc  DMagnet.cc  EDC1.cc  EDC1Hit.cc  EDC1SD.cc  EDC2.cc  EDC2Hit.cc  EDC2SD.cc  EHodo1.cc  EHodo2.cc  HESAnalysis.cc  HESDetectorConstruction.cc  HESEH1Hit.cc  HESEH1SD.cc  HESEH2Hit.cc  HESEH2SD.cc  HESEventAction.cc  HESField.cc  HESParamMan.cc  HESPrimaryGeneratorAction.cc  HESRunAction.cc  HESSteppingAction.cc  HESTargetHit.cc  HESTargetSD.cc  HESTrackingAction.cc  HESTrajectory.cc  HESTransportation.cc  HESVDHit.cc  HESVDSD.cc  MaterialList.cc  PCS.cc  PCSFieldMan.cc  Q1FieldMan.cc  Q1Magnet.cc  Q2FieldMan.cc  Q2Magnet.cc  SM2.gdml  (+7 more)
